--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="history.html">History</a>
               </li>
 
-
+//teste
               <li class="nav-item">
                 <a class="nav-link" href="bestplaces.html">Best places</a>
               </li>
